# hubbard

./: .gitattributes  .gitignore  DEPLOY.md  README.md  hubbard.py  index.html  install-py3.py  install-py3.sh  install.sh  pyproject.toml  setup.cfg  setup.py
Examples/31cGNR/: compute.py
Examples/molecules/2B-7AGNR/: 7AGNR2B_5x3.XV  compute.py  compute_5x3.py  compute_5x5.py
Examples/molecules/anthracenes/: 4-anthracene.XV  compute.py
Examples/molecules/antracenes/: 2-antracene.XV  compute.py
Examples/molecules/cgnr-junction/: README.md  compute.py  junction.XV
Examples/molecules/clar-goblet/: compute.py
Examples/molecules/kondo-paper/: fig_S11-S13.py  fig_S14.py
Examples/molecules/triangulene/: compute.py
Examples/periodic/31-chiral/: compute.py
Examples/periodic/7AGNR/: README.md  compute.py
Examples/periodic/ssh/: compute.py
Hubbard/: HubbardSCF.py  __init__.py  density.py  hamiltonian.py  hubbard.py  info.py  ncdf.py  ncsile.py  negf.py  scf.py  setup.py  sp2.py
Hubbard/geometry/: __init__.py  add_Hatoms.py  graphene_ribbon.py  ssh.py
Hubbard/plot/: __init__.py  bandstructure.py  bonds.py  charge.py  plot.py  spectrum.py  wavefunction.py
Hubbard/tests/: test_hamiltonian.py
Jupyter/: Plot-Bands.ipynb  Plot-MFH-bands-2.ipynb  Plot-MFH-bands.ipynb  Plot-MFH.ipynb  Plot-bands-wMFH.ipynb  Plot-bands.ipynb  README.md  figures-paper.ipynb
Jupyter/.ipynb_checkpoints/: figures-paper-checkpoint.ipynb
LDA/31cGNR/8.870/: plot-bands.py
Systems/: mol3.XV
Tests/: test-hubbard-plots.py  test-hubbard-quantitative.py  test-hubbard-quick.py  test-hubbard.py  test-hubbard.py~  test-sisl.py
Tests/mol-ref/: mol-ref.XV  mol-ref.nc
doc/: Makefile  api.rst  conf.py  examples.rst  index.rst  installation.rst  publications.rst  run.sh  theory.tex
doc/examples/: molecules.rst  open.rst  periodic.rst
docs/: Makefile  api.rst  conf.py  conf_prepare.sh  examples.rst  funding.rst  index.rst  installation.rst  publications.rst
docs/_templates/autosummary/: module.rst
docs/examples/: convert-rst-to-md.sh  open.rst  periodic.ipynb  periodic.rst
docs/latest/: .buildinfo  api.html  examples.html  funding.html  genindex.html  index.html  installation.html  objects.inv  publications.html  py-modindex.html  search.html  searchindex.js
docs/latest/_modules/: index.html
docs/latest/_sources/: examples.rst.txt  index.rst.txt  installation.rst.txt  publications.rst.txt
docs/latest/_static/: documentation_options.js
docs/latest/api-generated/: hubbard.HubbardHamiltonian.html  hubbard.NEGF.html  hubbard.calc_n.html  hubbard.html  hubbard.ncSileHubbard.html  hubbard.ncSilehubbard.html  hubbard.plot.Bandstructure.html  hubbard.plot.BondHoppings.html  hubbard.plot.BondOrder.html  hubbard.plot.Bonds.html  hubbard.plot.Charge.html  hubbard.plot.ChargeDifference.html  hubbard.plot.DOS.html  hubbard.plot.DOS_distribution.html  hubbard.plot.DOSmap.html  hubbard.plot.LDOS.html  hubbard.plot.LDOS_from_eigenstate.html  hubbard.plot.LDOSmap.html  hubbard.plot.Spectrum.html  hubbard.plot.SpinPolarization.html  hubbard.plot.Wavefunction.html  hubbard.plot.html  hubbard.real_space_grid.html  hubbard.sp2.html
docs/latest/examples/: molecules.html  open.html  open.ipynb  periodic.html
examples/: README.md
examples/molecules/: README.md
examples/molecules/2B-7AGNR/: 7AGNR2B_5x5.XV  compute_5x3.py  compute_5x5.py  join-pdf.sh
examples/molecules/anthracenes/: compute.py
examples/molecules/benzene/: README.md  benzene.xyz  compute.py
examples/molecules/clar-goblet/: clar-goblet.xyz  compute_FM-AFM.py
examples/molecules/kondo-paper/: fig_3.py  fig_S11-S13.py  fig_S14.py  fig_S15.py
examples/molecules/triangulene/: compute.py  compute_FM-AFM.py  plot_DOS.py  plot_WF_DOS.py  plot_WF_ST.py
examples/molecules/triangulene-2/: compute_FM-AFM.py  plot_WF_ST.py  triangulene-2.xyz
examples/molecules/triangulene-extended/: compute_FM-AFM.py  plot_WF_ST.py
examples/open/: README.md
examples/open/9AGNR-7AGNR/: compute.py
examples/periodic/: README.md
examples/periodic/31-chiral/: compute.py
examples/periodic/32-chiral/: compute.py
examples/periodic/7AGNR/: 2B-7AGNR-3.XV  7AGNR-3.XV  README.md  compute.py
examples/periodic/benchmarks/: compute.py
examples/periodic/chiralGNRs/: calc-zak-vs-U.py  chiral-geom.py  compute.py  compute_sym.py  open_boundary.py  test_pythtb.py
examples/periodic/ssh/: README.md  SSH-topological.XV  SSH-trivial.XV  analyze.py  compute.py  (+2 more)
hubbard/: EQCONTOUR  __init__.py  block_linalg.py  density.py  fixlist.txt  grid.py  hamiltonian.py  ncsile.py  negf.py  setup.py  sp2.py
hubbard/geometry/: __init__.py  add_Hatoms.py  graphene_ribbon.py  ssh.py
hubbard/plot/: __init__.py  bandstructure.py  bonds.py  charge.py  plot.py  spectrum.py  wavefunction.py
hubbard/tests/: test_hamiltonian.py
tests/: ELEC.fdf  README.md  RUN.fdf  Test_BTD3.py  test-BTD.py  test-BTD_2.py  test-hubbard-geom.py  test-hubbard-io.py  test-hubbard-multi-orbitals.py  test-hubbard-open.py  test-hubbard-plots.py  test-hubbard-quantitative.py  test-hubbard-quick.py  test-hubbard-spin-deg.py  test-sisl.py  test-transmission-open.py  test-zak.py  test_dm.py
tests/mol-ref/: density.nc
tutorials/: README.md
tutorials/MFH_01/: run.ipynb
tutorials/MFH_02/: run.ipynb
tutorials/MFH_03/: run.ipynb
tutorials/MFH_1/: run.ipynb
tutorials/MFH_2/: run.ipynb
tutorials/MFH_3/: run.ipynb
(+231 files in other folders)
