# Regarding pyproject.toml see
# - PEP 517 project metadata https://www.python.org/dev/peps/pep-0517
# - PEP 518 project metadata https://www.python.org/dev/peps/pep-0518
# - PEP 621 project metadata https://www.python.org/dev/peps/pep-0621

# First we define the build-system which we will probably alter the most
[build-system]
# TODO update this together with setup.py
requires = [
    "wheel",
    "setuptools>=46.0",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

# Top most items are probably changed the most
[project]
requires-python = ">=3.6"

# Dependencies are forced from sisl
# So we do not need to specify numpy, netcdf etc.
# Only the ones that sisl does not specify
# This ensures that hubbard should not worry about
# dependencies
dependencies = [
    "sisl>=0.11.0",
    "matplotlib>=2.2.2"
]


name = "hubbard"
description = "Python package for mean-field Hubbard models"
readme = "README.md"
license = {text = "LGPLv3"}
keywords = ["tight-binding", "NEGF", "physics"]

authors = [
    {name = "Sofia Sanz", email = "sofia.sanz@dipc.org"},
    {name = "Thomas Frederiksen", email = "thomas_frederiksen@ehu.eus"},
    {name = "Nick Papior"},
    {name = "Mads Brandbyge"}
]
maintainers = [{name="hubbard developers"}]

# instead one could do [project.urls] homepage = ... ; documentation = ...
urls = [
   {homepage = "https://dipc-cc.github.io/hubbard/"},
   {releases = "https://github.com/dipc-cc/hubbard/releases"},
   {documentation = "https://dipc-cc.github.io/hubbard/"},
   {repository = "https://github.com/dipc-cc/hubbard"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities"
]

# We purposefully get the version dynamically
dynamic = ["version"]

[tool.pytest.ini_options]
testpaths = [
    "hubbard"
]
addopts = "-rXs --durations=20"


[tool.setuptools_scm]
write_to = "hubbard/_version.py"
fallback_version = "0.0.0.dev+$Format:%H$"
