[metadata]
name = hubbard
version = attr: hubbard.__version__
license = LGPL-3.0
readme = file: README.md
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
   Homepage = https://dipc-cc.github.io/hubbard
   Documentation = https://dipc-cc.github.io/hubbard
